--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index.md</title>
+<title>zb.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 <style>
@@ -421,8 +421,8 @@ void 0!==arguments[0]&&(br.sequenceConfig=arguments[0]),e=arguments[1]):e=argume
           : 'default'
     });
   </script>
-<h1 id="%E6%B5%8B%E8%AF%95%E7%BD%91%E7%AB%99">测试网站</h1>
-<h2 id="%E8%BF%99%E6%98%AF07hyx06%E7%9A%84%E4%B8%AA%E4%BA%BA%E7%BD%91%E7%AB%99%EF%BC%81">这是07hyx06的个人网站！</h2>
+<h1 id="%E8%B5%B5%E5%8D%9A%E6%98%AF%E5%82%BB%E5%B1%8C">赵博是傻屌</h1>
+<p><code>zbzbzbsb？ Yes！</code></p>
 
 </body>
 </html>
