--- a/index.html
+++ b/index.html
@@ -9,31 +9,44 @@
     <!-- Bootstrap core CSS -->
 	<link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" rel="stylesheet">
-
+	<style>
+		.jumbotron{
+		background:url(raw/bg.jpg);
+		}
+	</style>
 </head>
 
 <body>
 	<div class="jumbotron">
 		<div class="container">
-			<h1>07hyx06的个人网站</h1>
-			<p>这里主要用来存放一些代码，笔记与学习记录。</p>
-			<p><a class="btn btn-primary btn-lg" href="#" role="button">我的简历 &raquo;</a></p>
+			<div class="row">
+				<div class="col-md-10">
+					<h1>07hyx06的个人网站</h1>
+					<p><b>这里用来存放一些代码，笔记与学习记录。</b></p>
+					<p><a class="btn btn-primary btn-lg" href="#" role="button">我的简历 &raquo;</a></p>
+				</div>
+
+				<div class="col-md-2">
+					<img src="raw/avatar.jpg" alt="avatar" class="img-circle" width="200">
+				</div>
+			</div>
 		</div>
 	</div>
+
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<h2>编程</h2>
+				<h2><span class="glyphicon glyphicon glyphicon-tag" aria-hidden="true"></span>编程</h2>
 				<p>存放PAT甲级考试题库的题解，以及一些数据结构与算法题。目前主攻C与python。</p>
 				<p><a class="btn btn-default" href="code.html" role="button">进入专栏 &raquo;</a></p>
 			</div>
 			<div class="col-md-4">
-				<h2>计算机视觉</h2>
+				<h2><span class="glyphicon glyphicon glyphicon-tag" aria-hidden="true"></span>计算机视觉</h2>
 				<p>目前比较感兴趣的研究发现，会更新一些深度学习论文的笔记与复现tutorial。</p>
 				<p><a class="btn btn-default" href="#" role="button">进入专栏 &raquo;</a></p>
 			</div>
 			<div class="col-md-4">
-				<h2>数学竞赛</h2>
+				<h2><span class="glyphicon glyphicon glyphicon-tag" aria-hidden="true"></span>数学竞赛</h2>
 				<p>每周坚持总结一些竞赛题，争取2020年的全国大学生数学竞赛进入省队。</p>
 				<p><a class="btn btn-default" href="#" role="button">进入专栏 &raquo;</a></p>
 			</div>
