--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" rel="stylesheet">
 	<style>
 		.jumbotron{
-		background:url(raw/bg.jpg);
+			background:url(raw/bg.jpg);
 		}
 	</style>
 </head>
@@ -21,7 +21,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10">
-					<h1>07hyx06的个人网站</h1>
+					<h1>07hyx06的个人网站hh</h1>
 					<p><b>这里用来存放一些代码，笔记与学习记录。</b></p>
 					<p><a class="btn btn-primary btn-lg" href="#" role="button">我的简历 &raquo;</a></p>
 				</div>
