--- a/code.html
+++ b/code.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="page-header">
-                <h1>代码仓库 <small> algorithm&data structure</small></h1>
+                <h1>代码仓库 <small> Algorithm & Data Structure</small></h1>
             </div>
         </div>
         <div class="row">
