--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
     <!-- Bootstrap core CSS -->
 	<link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" rel="stylesheet">
-	<style>
-		.jumbotron{
-			background:url(raw/bg.jpg);
-		}
-	</style>
 </head>
 
 <body>
-	<div class="jumbotron">
+	<div class="jumbotron" style="background:url(raw/bkg_purple.jpg)">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10">
@@ -36,22 +31,35 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<h2><span class="glyphicon glyphicon glyphicon-tag" aria-hidden="true"></span>编程</h2>
-				<p>存放PAT甲级考试题库的题解，以及一些数据结构与算法题。目前主攻C与python。</p>
-				<p><a class="btn btn-default" href="code.html" role="button">进入专栏 &raquo;</a></p>
+				<div class='thumbnail'>
+					<img src='raw/code.jpg'>
+					<h2>编程</h2>
+					<p>存放PAT甲级考试题库的题解，以及一些数据结构与算法题。主攻C|C++|python。</p>
+					<p><a class="btn btn-default" href="code.html" role="button">进入专栏 &raquo;</a></p>
+				</div>
 			</div>
+
 			<div class="col-md-4">
-				<h2><span class="glyphicon glyphicon glyphicon-tag" aria-hidden="true"></span>计算机视觉</h2>
-				<p>目前比较感兴趣的研究发现，会更新一些深度学习论文的笔记与复现tutorial。</p>
-				<p><a class="btn btn-default" href="#" role="button">进入专栏 &raquo;</a></p>
+				<div class="thumbnail">
+					<img src='raw/cv.jpg'>
+					<h2>计算机视觉</h2>
+					<p>感兴趣的研究方向，会更新一些深度学习论文的笔记与复现tutorial。</p>
+					<p><a class="btn btn-default" href="#" role="button">进入专栏 &raquo;</a></p>	
+				</div>
 			</div>
+
 			<div class="col-md-4">
-				<h2><span class="glyphicon glyphicon glyphicon-tag" aria-hidden="true"></span>数学竞赛</h2>
-				<p>每周坚持总结一些竞赛题，争取2020年的全国大学生数学竞赛进入省队。</p>
-				<p><a class="btn btn-default" href="#" role="button">进入专栏 &raquo;</a></p>
+				<div class="thumbnail">
+					<img src='raw/math.jpg'>
+					<h2>数学竞赛</h2>
+					<p>每周坚持总结一些竞赛题，争取2020年的全国大学生数学竞赛进入省队。</p>
+					<p><a class="btn btn-default" href="#" role="button">进入专栏 &raquo;</a></p>	
+				</div>
+				
 			</div>
 		</div>
 	</div>
 </div>
+
 </body>
 </html>
