--- a/index.html
+++ b/index.html
@@ -7,22 +7,30 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>welcome to 07hyx06!</title>
     <!-- Bootstrap core CSS -->
-	<link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <!-- Bootstrap core js -->
+    <script src="jquery-3.4.1.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-	<div class="jumbotron" style="background:url(raw/bkg_purple.jpg)">
-		<div class="container">
+	<nav class="navbar navbar-expand-sm bg-dark">
+		<a class="navbar-brand text-light" href="#">&nbsp&nbsp网站主页</a>
+	</nav>
+	<br>
+	
+	<div class="container">
+		<div class="jumbotron" style="background:url(raw/bkg_渐变色.jpg)">
 			<div class="row">
-				<div class="col-md-10">
-					<h1>07hyx06的个人网站</h1>
-					<p><b>这里用来存放一些代码，笔记与学习记录。</b></p>
+				<div class="col-md-9">
+					<h1 class="display-3 font-weight-normal">07hyx06的个人网站</h1>
+					<p class="font-italic"><b>存放一些代码，笔记与学习记录。</b></p>
 					<p><a class="btn btn-primary btn-lg" href="#" role="button">我的简历 &raquo;</a></p>
 				</div>
 
-				<div class="col-md-2">
-					<img src="raw/avatar.jpg" alt="avatar" class="img-circle" width="200">
+				<div class="col-md-3">
+					<img src="raw/avatar.jpg" alt="avatar" class="rounded-circle" width="200">
 				</div>
 			</div>
 		</div>
@@ -31,35 +39,33 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<div class='thumbnail'>
+				<div class='card'>
 					<img src='raw/code.jpg'>
 					<h2>编程</h2>
 					<p>存放PAT甲级考试题库的题解，以及一些数据结构与算法题。主攻C|C++|python。</p>
-					<p><a class="btn btn-default" href="code.html" role="button">进入专栏 &raquo;</a></p>
+					<p><a class="btn btn-success" href="#" role="button">进入专栏 &raquo;</a></p>
 				</div>
 			</div>
 
 			<div class="col-md-4">
-				<div class="thumbnail">
+				<div class="card">
 					<img src='raw/cv.jpg'>
 					<h2>计算机视觉</h2>
 					<p>感兴趣的研究方向，会更新一些深度学习论文的笔记与复现tutorial。</p>
-					<p><a class="btn btn-default" href="#" role="button">进入专栏 &raquo;</a></p>	
+					<p><a class="btn btn-success" href="#" role="button">进入专栏 &raquo;</a></p>	
 				</div>
 			</div>
 
 			<div class="col-md-4">
-				<div class="thumbnail">
+				<div class="card">
 					<img src='raw/math.jpg'>
 					<h2>数学竞赛</h2>
 					<p>每周坚持总结一些竞赛题，争取2020年的全国大学生数学竞赛进入省队。</p>
-					<p><a class="btn btn-default" href="#" role="button">进入专栏 &raquo;</a></p>	
+					<p><a class="btn btn-success" href="#" role="button">进入专栏 &raquo;</a></p>	
 				</div>
-				
 			</div>
 		</div>
 	</div>
 </div>
-
 </body>
 </html>
