--- a/blog_model.html
+++ b/blog_model.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>welcome to 07hyx06!</title>
+    <title>GAN</title>
     <!-- Bootstrap core CSS -->
-	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- Bootstrap core js -->
-    <script src="jquery-3.4.1.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="../jquery-3.4.1.min.js"></script>
+    <script src="../bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
 </head>
-
 <body>
     <nav class="navbar navbar-expand-sm bg-dark">
-		<a class="navbar-brand text-light" href="#">&nbsp&nbsp网站主页</a>
+		<a class="navbar-brand text-light" href="../index.html">&nbsp&nbsp网站主页</a>
 	</nav>
 	<br>
     <div class="container">
         <div class="blog-header">
-            <h1 class="blog-title">博客标题</h1>
-            <p class="lead blog-description">博客说明。</p>
+            <h1 class="blog-title">Generative Adversarial Nets</h1>
+            <p class="lead blog-description">最初版本的GAN</p>
         </div>
 
         <div class="row">
@@ -31,17 +31,14 @@
             </div>
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
             <div class="sidebar-module">
-                <h4>相关文章</h4>
+                <h4>友情链接</h4>
                 <ol class="list-unstyled">
-                    <li><a href="#">主题</a></li>
+                    <li><a href="https://github.com/07hyx06">我的GitHub</a></li>
+                    <li><a href="https://arxiv.org/abs/1406.2661">这篇论文的地址</a></li>
                 </ol>
+                <h4>联系我</h4>
+                <p>1025723614@qq.com</p>
             </div>
-        <div class="sidebar-module">
-            <h4>友情链接</h4>
-            <ol class="list-unstyled">
-                <li><a href="https://github.com/07hyx06">GitHub</a></li>
-            </ol>
-        </div>
     </div>
 </body>
 </html>
