--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<img src='raw/code.jpg'>
 					<h2>编程</h2>
 					<p>存放PAT甲级考试题库的题解，以及一些数据结构与算法题。主攻C|C++|python。</p>
-					<p><a class="btn btn-success" href="#" role="button">进入专栏 &raquo;</a></p>
+					<p><a class="btn btn-success" href="code_content.html" role="button">进入专栏 &raquo;</a></p>
 				</div>
 			</div>
 
@@ -52,7 +52,7 @@
 					<img src='raw/cv.jpg'>
 					<h2>计算机视觉</h2>
 					<p>感兴趣的研究方向，会更新一些深度学习论文的笔记与复现tutorial。</p>
-					<p><a class="btn btn-success" href="#" role="button">进入专栏 &raquo;</a></p>	
+					<p><a class="btn btn-success" href="cv_content.html" role="button">进入专栏 &raquo;</a></p>	
 				</div>
 			</div>
 
@@ -60,7 +60,7 @@
 				<div class="card">
 					<img src='raw/math.jpg'>
 					<h2>数学竞赛</h2>
-					<p>每周坚持总结一些竞赛题，争取2020年的全国大学生数学竞赛进入省队。</p>
+					<p>坚持总结一些竞赛题，争取2020年的全国大学生数学竞赛进入省队。</p>
 					<p><a class="btn btn-success" href="#" role="button">进入专栏 &raquo;</a></p>	
 				</div>
 			</div>
