--- a/cv_content.html
+++ b/cv_content.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Code Code Code</title>
+    <title>Computer Vision</title>
     <!-- Bootstrap core CSS -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -20,20 +20,21 @@
 	<br>
     <div class="container">
         <div class="card-body">
-            <h1>Code</h1>
+            <h1>Computer Vision</h1>
         </div>
         <div id="accordion">
             <div class="card">
                 <div class="card-header">
-                    <a class="card-link" data-toggle="collapse" href="#collapse1">数据结构</a>
+                    <a class="card-link" data-toggle="collapse" href="#collapse1">生成对抗模型</a>
                 </div>
                 <div id="collapse1" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
-                        <li class="list-group-item"><a href="#">GAN：最初的生成对抗模型</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0001_GAN.html">GAN：最初的生成对抗模型</a></li>
+                        <li class="list-group-item"><a href="#">CycleGAN：加入循环一致性的GAN</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
-                    <a class="card-link" data-toggle="collapse" href="#collapse2">PAT甲级题库</a>
+                    <a class="card-link" data-toggle="collapse" href="#collapse2">图像分类模型</a>
                 </div>
                 <div id="collapse2" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
