--- a/cv_blog/0001_GAN.html
+++ b/cv_blog/0001_GAN.html
@@ -12,9 +12,10 @@
     <!-- Bootstrap core js -->
     <script src="../jquery-3.4.1.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
+    <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script> -->
 </head>
 <body>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
     <nav class="navbar navbar-expand-sm bg-dark">
 		<a class="navbar-brand text-light" href="../index.html">&nbsp&nbsp网站主页</a>
 	</nav>
