--- a/blog_model.html
+++ b/blog_model.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap core js -->
     <script src="../jquery-3.4.1.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-dark">
