--- a/blog_model.html
+++ b/blog_model.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>GAN</title>
+    <title>Blog</title>
     <!-- Bootstrap core CSS -->
 	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -34,7 +34,6 @@
                 <h4>友情链接</h4>
                 <ol class="list-unstyled">
                     <li><a href="https://github.com/07hyx06">我的GitHub</a></li>
-                    <li><a href="https://arxiv.org/abs/1406.2661">这篇论文的地址</a></li>
                 </ol>
                 <h4>联系我</h4>
                 <p>1025723614@qq.com</p>
