--- a/cv_blog/0002_交叉熵.html
+++ b/cv_blog/0002_交叉熵.html
@@ -52,7 +52,7 @@
                 </p>
                 <h2>Pytorch API</h2>
                 <p>
-                    <img src='raw/0002_1.png' class="text-center" width="600">
+                    <p class="text-center"><img src='raw/0002_1.png' class="text-center" width="600"></p>
                     <ul>
                         <li>weight：optional参数。可以实现对类别加权，在样本不平衡时可以采用。</li>
                         <li>reduction：默认为mean，即对交叉熵取均值；可以选用sum，为直接求和不取平均。</li>
