--- a/cv_content.html
+++ b/cv_content.html
@@ -52,7 +52,7 @@
                 <div id="collapse2" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
                         <li class="list-group-item"><a href="cv_blog/0001_GAN.html">GAN：最初的生成对抗模型</a></li>
-                        <li class="list-group-item"><a href="cv_blog/0003_CycleGAN.html">CycleGAN：加入循环一致性的GAN</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0003_CycleGAN.html">CycleGAN（+源码分析）：加入循环一致性的GAN</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
