--- a/cv_content.html
+++ b/cv_content.html
@@ -25,7 +25,7 @@
             </div>
             <div class="card-body">
                 <p>
-                    这里包含计算机视觉各方向的经典论文的原创笔记以及一些源代码分析与复现关键步骤。讨论请联系1025723614@qq.com :)
+                    这里包含计算机视觉各方向的经典论文的原创笔记以及一些源代码分析与复现关键步骤。
                     <ul>
                         <li>基础知识与Pytorch源码：Pytorch是目前最火的python优先深度学习库，其代码简洁优雅。
                             这部分包含一些源代码分析与深度学习基础概念的解释，包括损失函数，优化器，初始化，IOU等概念。</li>
@@ -53,6 +53,8 @@
                     <ul class="list-group">
                         <li class="list-group-item"><a href="cv_blog/0001_GAN.html">GAN：最初的生成对抗模型</a></li>
                         <li class="list-group-item"><a href="cv_blog/0003_CycleGAN.html">CycleGAN（+源码分析）：加入循环一致性的GAN</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0004_StarGAN.html">StarGAN（+源码分析）：CycleGAN扩展到多域迁移</a></li>
+                        
                     </ul>
                 </div>
                 <div class="card-header">
