--- a/cv_content.html
+++ b/cv_content.html
@@ -54,7 +54,7 @@
                         <li class="list-group-item"><a href="cv_blog/0001_GAN.html">GAN：最初的生成对抗模型</a></li>
                         <li class="list-group-item"><a href="cv_blog/0003_CycleGAN.html">CycleGAN（+源码分析）：加入循环一致性的GAN</a></li>
                         <li class="list-group-item"><a href="cv_blog/0004_StarGAN.html">StarGAN（+源码分析）：CycleGAN扩展到多域迁移</a></li>
-                        
+                        <li class="list-group-item"><a href="cv_blog/0005_UGATIT.html">UGATIT：使用注意力机制生成二次元头像</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
