--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="jumbotron" style="background:url(raw/bkg_渐变色.jpg)">
 			<div class="row">
 				<div class="col-md-9">
-					<h1 class="display-3 font-weight-normal">07hyx06的个人网站</h1>
+					<h1 class="display-3 font-weight-normal">hyx的个人网站</h1>
 					<p class="font-italic"><b>存放一些代码，笔记与学习记录。</b></p>
 					<p><a class="btn btn-primary btn-lg" href="#" role="button">我的简历 &raquo;</a></p>
 				</div>
@@ -42,7 +42,7 @@
 				<div class='card'>
 					<img src='raw/code.jpg'>
 					<h2>编程</h2>
-					<p>存放PAT甲级考试题库的题解，以及一些数据结构与算法题。主攻C|C++|python。</p>
+					<p>C | C++ | Python | Algorithms</p>
 					<p><a class="btn btn-success" href="code_content.html" role="button">进入专栏 &raquo;</a></p>
 				</div>
 			</div>
@@ -51,7 +51,7 @@
 				<div class="card">
 					<img src='raw/cv.jpg'>
 					<h2>计算机视觉</h2>
-					<p>感兴趣的研究方向，会更新一些深度学习论文的笔记与复现tutorial。</p>
+					<p>目前感兴趣的研究方向。</p>
 					<p><a class="btn btn-success" href="cv_content.html" role="button">进入专栏 &raquo;</a></p>	
 				</div>
 			</div>
@@ -59,8 +59,8 @@
 			<div class="col-md-4">
 				<div class="card">
 					<img src='raw/math.jpg'>
-					<h2>数学竞赛</h2>
-					<p>坚持总结一些竞赛题，争取2020年的全国大学生数学竞赛进入省队。</p>
+					<h2>数学</h2>
+					<p>I LOVE MATH FOREVER.</p>
 					<p><a class="btn btn-success" href="#" role="button">进入专栏 &raquo;</a></p>	
 				</div>
 			</div>
