--- a/cv_content.html
+++ b/cv_content.html
@@ -44,6 +44,7 @@
                 <div id="collapse1" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
                         <li class="list-group-item"><a href="cv_blog/0002_交叉熵.html">交叉熵</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0008_Pytorch操作查询.html">Pytorch基础操作</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
