--- a/code_blog/0001_下一个排列.html
+++ b/code_blog/0001_下一个排列.html
@@ -34,7 +34,7 @@
                 <h2>解决方案</h2>
                 <p>
                     什么样的序列没有下一个排列？只有\(5,4,3,2,1\)这种逆序数列。如果存在\(a[j]>{a[j-1]}\)，这种数列必然是有下一个排列的，最简单来说，将\(a[j]\)与\(a[j-1]\)互换后得到的新序列就比原先的序列大，但它不一定是最小的比他大的序列。另一方面，算法要求原地进行，即o(1)的空间复杂度，所以只能通过元素的交换来实现。一种自然的思路是<b>从右往左扫这个序列</b>，扫到第一个\(j\)满足\(a[j]>{a[j-1]}\)就将其交换。<br><br>
-                    来看下面的例子：\(1,9,8,4,7,6,5,3,2\)，从右往左扫描，发现\(a[4]>{a[3]}\)，即7比4大，所以需要交换4。这时4后面的序列有一个性质，就是<b>必然按照降序排列</b>。那么4该换到哪呢？4后面的数中比它大的最小的数是5，因此将4和5交换，原序列变成：\(1,9,8,5,7,6,4,3,2\)。注意交换之后，后面的序列<b>依旧保持降序的性质</b>。此时再把后面的序列倒过来，就得到最后一个排列了：\(1,9,8,5,2,3,4,6,7\)。<br><br>
+                    来看下面的例子：\(1,9,8,4,7,6,5,3,2\)，从右往左扫描，发现\(a[4]>{a[3]}\)，即7比4大，所以需要交换4。这时4后面的序列有一个性质，就是<b>必然按照降序排列</b>。那么4该换到哪呢？4后面的数中比它大的最小的数是5，因此将4和5交换，原序列变成：\(1,9,8,5,7,6,4,3,2\)。注意交换之后，后面的序列<b>依旧保持降序的性质</b>。此时再把后面的序列倒过来，就得到下一个排列了：\(1,9,8,5,2,3,4,6,7\)。<br><br>
                     总结一下，对于一个序列\(a_1,a_2,...,a_n\)，它的下一个排列可以通过如下步骤来找：<br>
                     第一步，从后往前扫描序列，找到第一个满足\(a[j]>{a[j-1]}\)的\(j\)；<br>
                     第二步，在\(a_j,a_{j+1},...,a_n\)中找到比\(a[j-1]\)大的最小的数，将其与\(a[j-1]\)交换；<br>
