--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<img src='raw/math.jpg'>
 					<h2>数学</h2>
 					<p>I LOVE MATH FOREVER.</p>
-					<p><a class="btn btn-success" href="#" role="button">进入专栏 &raquo;</a></p>	
+					<p><a class="btn btn-success" href="math_content.html role="button">进入专栏 &raquo;</a></p>	
 				</div>
 			</div>
 		</div>
