--- a/math_blog/0001_信息熵.html
+++ b/math_blog/0001_信息熵.html
@@ -78,7 +78,7 @@
                     <b>第三步，证明对于任意实数，有\(I(p)=-c\log_b p\)。</b><br>
                     取两个有理数列分别从上下逼近这个数，由单调有界原理知这两个数列都有极限，再由公理2连续性知极限相等，综上\(I(p)=-c\log_b p\)得证。信息理论中，取\(c=1\)。
                 </p>
-                <h2>信息与熵的关系</h2>
+                <h2>信息熵</h2>
                 <p>
                     <b>熵的定义为信息量的期望值</b>。由前面的结论，事件\(X\)的熵为：
                     <p class="text-center">
@@ -95,10 +95,19 @@
                     </p><br>
                     熵与条件熵，联合熵之间满足性质1称为<b>链式法则</b>：
                     <p class="text-center">
-                        \(H(X,Y)=H(X)+H(Y|X)\)
+                        \(H(X,Y)=H(X)+H(Y|X)\)<br>
+                        \(H(X_1,X_2,...,X_n)=\sum\limits_i H(X_i|X_1...X_{i-1})\)
                     </p>
                     上面这个性质可以由公理3与条件概率性质\(P_{X,Y}(x,y)=P_{X}(x)P_{Y|X}(y|x)\)证明。<br><br>
                     此外，熵还满足性质2：\(H(X)\geq H(X|Y)\)。这条性质在直观上同样很好理解：得知了事件\(Y\)后，事件\(X\)的不确定性会下降，反应为熵减少。等号成立当且仅当\(X,Y\)两事件独立。综合上面的两条性质，如果\(X,Y\)独立，那么就有：\(H(X,Y)=H(X)+H(Y)\).
+                </p>
+                <h2>共识</h2>
+                <p>
+                    共识在信息传递中起到十分重要的作用。<b>定义为两个事件的共同信息</b>：
+                    <p class="text-center">
+                        \(I(X;Y)=H(X)+H(Y)-H(X,Y)\)
+                    </p>
+                    共识有<b>性质1</b>：\(I(X;Y)\leq \min\{H(X),H(Y)\}\)。直观上，两个事件共同携带的信息小于每个事件分别携带的信息。当且仅当事件\(X,Y\)之间存在函数关系（这样就可以通过\(X\)推测\(Y\)了）时，等号成立。<b>性质2</b>，共识具有对称性：\(I(X,Y)=I(Y,X)\)。
                 </p>
                 <h2>附录</h2>
                 <p>
