--- a/math_content.html
+++ b/math_content.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Code Code Code</title>
+    <title>I LOVE MATH</title>
     <!-- Bootstrap core CSS -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -20,7 +20,12 @@
 	<br>
     <div class="container">
         <div class="card-body">
-            <h1>Code</h1>
+            <h1>数学</h1>
+        </div>
+        <div class="card-body">
+            <p>
+                这里包含一些我比较感兴趣的数学课笔记。希望每学期都可以额外修一门数学课。
+            </p>
         </div>
         <div id="accordion">
             <div class="card">
