--- a/cv_content.html
+++ b/cv_content.html
@@ -58,7 +58,7 @@
                         <li class="list-group-item"><a href="cv_blog/0005_UGATIT.html">UGATIT：使用注意力机制生成二次元头像</a></li>
                         <li class="list-group-item"><a href="cv_blog/0006_AttentionGAN.html">AttentionGAN：一种加入注意力机制的思路</a></li>
                         <li class="list-group-item"><a href="cv_blog/0007_ShapeMatchingGAN.html">ShapeMatchingGAN：使用GAN生成艺术字体</a></li>
-                        
+                        <li class="list-group-item"><a href="cv_blog/0009_GANDissection.html">GANDissection：GAN的可视化技术</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
